putting in comments

--- a/Part 1/first html draft.html
+++ b/Part 1/first html draft.html
@@ -10,8 +10,9 @@
 
 <head>
 
-<html lang="en">
-<link rel = "stylesheet", href="stylesheet.css">
+<html lang="en"> <!--This is for chossing the language -->
+<link rel = "stylesheet", href="stylesheet.css"> <!-- This line Links the CSS (Cascading StyleSheet) through rel="stylesheet" and 
+href="stylesheet.css"(this is the location of the css file can be named differently)-->
 <meta name="author" content= "Dr Elanor Gaye">
 
 <body>
@@ -34,7 +35,7 @@
       		UK
     		</address>
 
-		<h1>Re: Eileen Dover university application</h1>
+		<h1>Re: Eileen Dover university application</h1> <!--Header element -->
 		<p>
 			Dear Eileen,
 	  
