Putting in one more comment

--- a/Part 1/first html draft.html
+++ b/Part 1/first html draft.html
@@ -97,7 +97,7 @@ href="stylesheet.css"(this is the location of the css file can be named differen
 				 being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</dd>
 		  </dl>
 	
-		  For more of my research, see my <a href="http://example.com">exotic dance research page</a>.<br />
+		  For more of my research, see my <a href="http://examplewebite.com">exotic dance research page</a>.<br /> <!--This is how to hyperlink text -->
 		  
 		  Yours sincerely,<br />
 		  <br />
