--- a/Assignment 2 - HTML Multimedia and Tables/Part 2/2nd assigment.html
+++ b/Assignment 2 - HTML Multimedia and Tables/Part 2/2nd assigment.html
@@ -37,3 +37,17 @@
                     <td scope="col">Number of moon</td>
                     <td scope="col">Notes</td>
                 </tr>
+            </thread>
+            <tbody>
+            
+
+
+
+
+
+
+
+
+
+                
+            </tbody>
