commenting on the index

--- a/Assigment 1/Part 1/Assigment_1_Commented.html
+++ b/Assigment 1/Part 1/Assigment_1_Commented.html
@@ -1,19 +1,20 @@
 <!--
-	Name: Your Name
-	File: filename.html
-	Date: XX September 202X
-	A very brief description of the file.
+	Name: Shayaan
+	File: index.html
+	Date: September 12
+	Descpition: Commented.
 	-->
 
 
 <!DOCTYPE html>
 
-<head>
+<head><!--THe header tag is where the whole setup for the html file is located-->
 
 <html lang="en"> <!--This is for chossing the language -->
 <link rel = "stylesheet", href="stylesheet.css"> <!-- This line Links the CSS (Cascading StyleSheet) through rel="stylesheet" and 
 href="stylesheet.css"(this is the location of the css file can be named differently)-->
-<meta name="author" content= "Dr Elanor Gaye">
+<meta name="author" content= "Dr Elanor Gaye"> <!-- the Meta tag handles metadata, this basically has a couple tags so you can breifly describe a website without going in to it, 
+in this case the author name-->
 
 <body>
 	<p class="sender-column">
@@ -33,7 +34,7 @@ href="stylesheet.css"(this is the location of the css file can be named differen
       		4321 Cliff Top Edge<br />
       		Dover, CT9 XXX<br />
       		UK
-    		</address>
+		</address>
 
 		<h1>Re: Eileen Dover university application</h1> <!--Header element -->
 		<p>
