--- a/Assigment 1/Part 1/index.html
+++ b/Assigment 1/Part 1/index.html
@@ -7,12 +7,9 @@
 
 
 <!DOCTYPE html>
-
+<html lang="en"> 
 <head>
-
-<html lang="en"> <!--This is for chossing the language -->
-<link rel = "stylesheet", href="stylesheet.css"> <!-- This line Links the CSS (Cascading StyleSheet) through rel="stylesheet" and 
-href="stylesheet.css"(this is the location of the css file can be named differently)-->
+<link rel = "stylesheet", href="stylesheet.css"> 
 <meta name="author" content= "Dr Elanor Gaye">
 
 <body>
@@ -35,7 +32,7 @@ href="stylesheet.css"(this is the location of the css file can be named differen
       		UK
 		</address>
 
-		<h1>Re: Eileen Dover university application</h1> <!--Header element -->
+		<h1>Re: Eileen Dover university application</h1> 
 		<p>
 			Dear Eileen,
 	  
