--- a/Assigment 1/Part 2/index.html
+++ b/Assigment 1/Part 2/index.html
@@ -19,7 +19,7 @@ Date: Septemeber 12
 
   <body>
 
-    <header><h1>Birdwatching</h1><img src="dove.png" alt="a simple dove logo">
+    <header><h1>Birdwatching</h1><img src="dove.png" alt="a simple dove logo"> <!--Retriving the dove picture-->
       <nav>
         <ul>
           <li><span>Home</span></li>
