--- a/Assignment 3 - CSS/Part 2/index.html
+++ b/Assignment 3 - CSS/Part 2/index.html
@@ -9,6 +9,10 @@ Description: File for the box-->
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width"
-    <title>Coolbox
-
-    </title>
+    <title>cool box</title>
+    <link href="style.css" rel="stylesheet"
+  </head>
+  <body>
+    <div><p>This is a cool box</p></body><div>
+  </body>
+  </html>
