Trying to fix the erorr of there being a white background in the box

--- a/Assignment 3 - CSS/Part 2/index.html
+++ b/Assignment 3 - CSS/Part 2/index.html
@@ -8,9 +8,9 @@ Description: File for the box-->
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width"
+    <meta name="viewport" content="width=device-width">
     <title>cool box</title>
-    <link href="style.css" rel="stylesheet"
+    <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
     <div><p>This is a cool box</p></body><div>
