--- a/Makeup Assigment/index.html
+++ b/Makeup Assigment/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<link rel = "projects", href= "projects.css">
+<link rel = "stylesheet", href= "style.css">
 </head>
 </html>
 
