last minute changes

--- a/Makeup Assigment/index.html
+++ b/Makeup Assigment/index.html
@@ -41,6 +41,8 @@ This website is designed to host all my projects and information about me.
         <p>A list of where I keep all the 3D models</p>
 
 
-
+<footer>
+    Shayaan Copyright 2024
+</footer>
 
 
